--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "description": "Provide APIs related to cosmetics for clients",
   "engine": "node >= 0.4.1",
   "dependencies": {
+    "body-parser": "^1.13.3",
     "express": "^4.13.3",
-    "mongoose": "^4.1.1"
+    "jsonwebtoken": "^5.0.4",
+    "mongoose": "^4.1.1",
+    "morgan": "^1.6.1"
   }
 }
