--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "bcrypt": "^0.8.5",
     "body-parser": "^1.13.3",
     "express": "^4.13.3",
+    "express-validator": "^2.15.0",
+    "jsonschema": "^1.0.2",
     "jsonwebtoken": "^5.0.4",
     "mongoose": "^4.1.1",
     "morgan": "^1.6.1"
