--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jsonschema": "^1.0.2",
     "jsonwebtoken": "^5.0.4",
     "mongoose": "^4.1.1",
-    "morgan": "^1.6.1"
+    "morgan": "^1.6.1",
+    "underscore": "^1.8.3"
   }
 }
