--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jsonwebtoken": "^5.0.4",
     "mongoose": "^4.1.1",
     "morgan": "^1.6.1",
+    "multer": "^1.0.3",
     "underscore": "^1.8.3"
   }
 }
