--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "main": "server.js",
   "engine": "node >= 0.4.1",
   "dependencies": {
+    "async": "^1.4.2",
     "bcrypt": "^0.8.5",
     "body-parser": "^1.13.3",
     "express": "^4.13.3",
     "express-validator": "^2.15.0",
-    "gm": "^1.18.1",
+    "gm": "~1.18.1",
     "jsonschema": "^1.0.2",
     "jsonwebtoken": "^5.0.4",
     "mongoose": "^4.1.1",
     "morgan": "^1.6.1",
     "multer": "^1.0.3",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "cron": "~1.0.9"
   }
 }
